Wed Sep 22 11:58:47 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/orbsvcs.html:
        * orbsvcs/Concurrency_Service/Concurrency_Service.mpc:
          Renamed 'Concurrency_Service' to 'tao_cosconcurrency'

Wed Sep 22 11:56:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/orbsvcs.html:
        * orbsvcs/Fault_Notifier/Fault_Notifier.mpc:
        * orbsvcs/tests/FT_App/run_test_demo.pl:
        * orbsvcs/tests/FT_App/run_test_detector.pl:
        * orbsvcs/tests/FT_App/run_test_notifier.pl:
        * orbsvcs/tests/FT_App/run_test_rmnotifier.pl:
          Renamed 'Fault_Notifier' to 'tao_fault_notifier'

Wed Sep 22 11:49:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/tutorials/Quoter/Simple/Impl-Repo/index.html:
        * orbsvcs/DevGuideExamples/ImplRepo/Activator/run_test.pl:
        * orbsvcs/DevGuideExamples/ImplRepo/run_test.pl:
        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
        * orbsvcs/examples/ImR/Advanced/run_test.pl:
        * orbsvcs/tests/Bug_1395_Regression/run_test.pl:
        * orbsvcs/tests/Bug_1437_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/Bug_2604_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/NameService/run_test.pl:
        * orbsvcs/tests/ImplRepo/run_test.pl:
        * orbsvcs/tests/ImplRepo/scale/run_test.pl:
          Renamed 'ImR_Activator' to 'tao_imr_activator'

Wed Sep 22 11:39:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/orbsvcs.html:
        * docs/tutorials/Quoter/Simple/Impl-Repo/index.html:
        * orbsvcs/DevGuideExamples/ImplRepo/Activator/run_test.pl:
        * orbsvcs/DevGuideExamples/ImplRepo/Basic/run_test.pl:
        * orbsvcs/DevGuideExamples/ImplRepo/IORTable/run_test.pl:
        * orbsvcs/DevGuideExamples/ImplRepo/run_test.pl:
        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc: