@@ -1,3 +1,9 @@
+Wed Sep 22 12:05:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * NEWS:
+        * docs/orbsvcs.html:
+          Fine tuning documentation.
+
 Wed Sep 22 11:58:47 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * docs/orbsvcs.html:
